@@ -1,3 +1,10 @@
+Thu Sep 16 10:48:17 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* elf-hppa.h (elf_hppa_relocate_section): Allow undefined
+	symbols when building shared libraries.
+	(elf_hppa_final_link_relocate): Correct handling of PCREL
+	relocations against undefined symbols.
+
 1999-09-16  Nick Clifton  <nickc@cygnus.com>
 
 	* elf32-arm.h (bfd_elf32_arm_get_bfd_for_interworking): Mark
